--- a/examples/views/ui_text/ui_text.haml
+++ b/examples/views/ui_text/ui_text.haml
@@ -2,4 +2,4 @@
 
     .moo-field
         %label Text
-        %input#ui_text{:type=>"text", :placeholder=>"Your text here"}
+        %input#ui_text_input{:type=>"text", :placeholder=>"Your text here"}
