--- a/source/css/mootor/core/_color.scss
+++ b/source/css/mootor/core/_color.scss
@@ -4,18 +4,21 @@
 $color-grey: #666;
 $color-dark-grey: #333;
 $color-light-grey: #ddd;
+$color-white: #fff;
 
 // Main palette
-$color-main: $color-grey;
-$color-accent: $color-grey;
-$color-neutral-light: $color-light-grey;
-$color-neutral-dark: $color-grey;
+$color-main: $color-grey !default;
+$color-accent: $color-grey !default;
+$color-neutral-light: $color-light-grey !default;
+$color-neutral-dark: $color-grey !default;
 
 // Backgrounds
-$color-bg-main: $color-neutral-light;
-$color-bg-alt: $color-neutral-dark;
+$color-bg-main: $color-neutral-light !default;
+$color-bg-alt: $color-neutral-dark !default;
 
+// Borders
+$color-border-main: $color-neutral-dark !default;
 
-
-
-
+// Text
+$color-text-action: $color-neutral-dark !default;
+$color-text-alt-secondary: $color-neutral-dark !default;
