--- a/source/css/mootor/ui/_overlay.scss
+++ b/source/css/mootor/ui/_overlay.scss
@@ -5,7 +5,7 @@
 $color-ui-overlay-bg: $color-dark-grey !default;
 
 .moo-overlay {
-    background-color: darken($color-ui-overlay-bg, 10%); 
+    background-color: $color-ui-overlay-bg; 
     opacity: .75;
     position: absolute;
     top: 0;
