--- a/source/css/mootor/ui/_select.scss
+++ b/source/css/mootor/ui/_select.scss
@@ -4,7 +4,7 @@
     height: 3em;
 }
 .moo-ui-select-wrapper {
-    overflow: hidden;
+    //overflow: hidden;
     height: 100%;
     .moo-ui-select-text {
         font-size: 1.5em;
