--- a/source/css/_mootor.scss
+++ b/source/css/_mootor.scss
@@ -1,6 +1,7 @@
 @import "mootor/core/normalize";
 @import "mootor/core/utilities";
 @import "mootor/core/color";
+@import "mootor/core/sprites";
 @import "mootor/core/type";
 @import "mootor/nav";
 @import "mootor/ui";
