--- a/source/css/mootor/core/_sprites.scss
+++ b/source/css/mootor/core/_sprites.scss
@@ -1,58 +1,53 @@
-/*
- * Sprites
- */
-
+// import compass sprite utility
 @import "compass/utilities/sprites/base";  
 
-// General Sprite Defaults
+$media-query-1: "-webkit-min-device-pixel-ratio : 1";
+$media-query-15: "-webkit-min-device-pixel-ratio : 1.5";
 
+// General Sprite Defaults
+// ----------------------------------------------------------
 $mootor-sprite-base-class: ".moo-icons" !default;
 $mootor-sprite-dimensions: false !default;
 $mootor-position: 0% !default;
 $mootor-spacing: 10px !default;
 $mootor-repeat: no-repeat !default;
+$mootor-sprite-folder: "sprites/" !default;
 
 // Mootor sprites
-
-$mootor-sprites: sprite-map("default/*.png",
+// ----------------------------------------------------------
+$mootor-sprites: sprite-map($mootor-sprite-folder + "*.png",
   $position: $mootor-position,
   $spacing: $mootor-spacing,
   $repeat: $mootor-repeat);
 
-// Use this to set the dimensions of an element
-// based on the size of the original image.
-
-@mixin mootor-sprite-dimensions($name) {
-  @include sprite-dimensions($mootor-sprites, $name)
+// All sprites should extend this class
+// The emblem-sprite mixin will do so for you.
+#{$mootor-sprite-base-class} {
+  background-image: $mootor-sprites;
+  background-repeat: no-repeat;
 }
 
 // Move the background position to display the sprite.
-
 @mixin mootor-sprite-position($name, $offset-x: 0, $offset-y: 0) {
-  @include sprite-position($mootor-sprites, $name, $offset-x, $offset-y)
+  @include sprite-position($mootor-bg-sprites, $name, $offset-x, $offset-y)
 }
 
 // Extends the sprite base class and set the background position for the desired sprite.
 // It will also apply the image dimensions if $dimensions is true.
-
 @mixin mootor-sprite($name, $dimensions: $mootor-sprite-dimensions, $offset-x: 0, $offset-y: 0) {
-  // @include sprite($mootor-sprites, $name, $dimensions, $offset-x, $offset-y)
-  background-image: $mootor-sprites;
-  background-repeat: no-repeat;
-  $pos: sprite-position($mootor-sprites, $name,  $offset-x,  $offset-y);
-  background-position: nth($pos, 1) nth($pos, 2);
-  width: image-width("default/#{$name}.png");
-  height: image-height("default/#{$name}.png");
-}
+  @extend #{$mootor-sprite-base-class};
 
-@mixin _mootor-sprite($name) {
-    @media screen and ($media-query-0) {
-        @include mootor-sprite($name);
-    }
-    @media screen and ($media-query-1) {
-        @include mootor-sprite($name);
-    }
-    @media screen and ($media-query-2) {
-        @include mootor-sprite($name + "x2");
-    }    
+  @media screen and ($media-query-1) {
+      $pos: sprite-position($mootor-sprites, $name,  $offset-x,  $offset-y );
+      background-position: nth($pos, 1) nth($pos, 2);
+      width: image-width($mootor-sprite-folder + "#{$name}.png");
+      height: image-height($mootor-sprite-folder + "#{$name}.png");
+  }
+  @media screen and ($media-query-15) {
+      background-position: $offset-x round(nth(sprite-position($mootor-sprites,  "x2-" + $name, 0, 2*$offset-y), 2)/ 2);
+      background-size: image-width(sprite-path($mootor-sprites))/2 image-height(sprite-path($mootor-sprites))/2; 
+      width: image-width($mootor-sprite-folder + "x2-#{$name}.png")/2;
+      height: image-height($mootor-sprite-folder + "x2-#{$name}.png")/2;
+  }
+
 }
