--- a/examples/index.haml
+++ b/examples/index.haml
@@ -58,4 +58,6 @@
         #ui_toggleswitch.moo-panel
         #ui_camera.moo-panel
         #ui_simplecamera.moo-panel
+
+        #nav_scroll.moo-panel
         
