--- a/examples/views/index/index.haml
+++ b/examples/views/index/index.haml
@@ -9,3 +9,5 @@
         %a.moo-nav{:href=>"#geo"} Geo
     %li
         %a.moo-nav{:href=>"#ui"} UI
+    %li
+        %a.moo-nav{:href=>"#nav_scroll"} Nav
