--- a/examples/views/index/index.html
+++ b/examples/views/index/index.html
@@ -14,4 +14,7 @@
   <li>
     <a class='moo-nav' href='#ui'>UI</a>
   </li>
+  <li>
+    <a class='moo-nav' href='#nav_scroll'>Nav</a>
+  </li>
 </nav>
