--- a/source/css/mootor/core/_normalize.scss
+++ b/source/css/mootor/core/_normalize.scss
@@ -185,8 +185,8 @@ input[type="search"] {
     // Addresses `appearance` set to `searchfield` in S5, Chrome.
     -webkit-appearance: textfield;
     // Addresses `box-sizing` set to `border-box` in S5, Chrome.
-    -webkit-box-sizing: content-box;
-    box-sizing: content-box;
+/*    -webkit-box-sizing: content-box;
+    box-sizing: content-box;*/
 }
 
 input[type="search"]::-webkit-search-cancel-button,
